--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "karma start --single-run"
+    "start": "http-server -p 8000 .",
+    "test": "karma start --single-run",
+    "preupdate-webdriver": "npm install",
+    "update-webdriver": "webdriver-manager update",
+    "start-webdriver": "webdriver-manager start",
+    "pree2e": "npm run update-webdriver",
+    "e2e": "protractor"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +21,15 @@
   "devDependencies": {
     "angular-mocks": "^1.6.4",
     "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
+    "http-server": "^0.10.0",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.1.1",
     "karma-firefox-launcher": "^1.0.1",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.3",
-    "mocha": "^3.3.0"
+    "mocha": "^3.3.0",
+    "protractor": "^5.1.1"
   }
 }
