--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.6.4"
+    "angular": "^1.6.4",
+    "es6-shim": "^0.35.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.6.4",
@@ -29,7 +30,9 @@
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.3",
+    "karma-sinon": "^1.0.5",
     "mocha": "^3.3.0",
-    "protractor": "^5.1.1"
+    "protractor": "^5.1.1",
+    "sinon": "^2.2.0"
   }
 }
